==> apache/nuttx/arch/arm/src/ht32f491x3/ht32f491x3_serial.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdbool.h>
#include <errno.h>
#include <stdint.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/serial/serial.h>
#include <nuttx/spinlock.h>
#include "chip.h"
#include "arm_internal.h"
#include "ht32f491x3_config.h"
#include "ht32f491x3_lowputc.h"
#include "ht32f491x3_serial.h"
#include "hardware/ht32f491x3_crm.h"
#include "hardware/ht32f491x3_uart.h"
#  define CONSOLE_USART 1
#  define CONSOLE_USART 2
#  define CONSOLE_USART 3
#  define CONSOLE_USART 0
#define HT32_USART_CTRL1_USED_INTS \
  (HT32_USART_CTRL1_IDLEIEN | HT32_USART_CTRL1_RDBFIEN | \
   HT32_USART_CTRL1_TDCIEN | HT32_USART_CTRL1_TDBEIEN | \
   HT32_USART_CTRL1_PERRIEN)
#define HT32_USART_CTRL3_USED_INTS HT32_USART_CTRL3_ERRIEN
#define HT32_NUART_PORTS (sizeof(g_uart_devs) / sizeof(g_uart_devs[0]))
#  define CONSOLE_DEVPTR (&g_usart1port)
#  define CONSOLE_DEVPTR (&g_usart2port)
#  define CONSOLE_DEVPTR (&g_usart3port)
#  define CONSOLE_DEVPTR ((FAR uart_dev_t *)0)

static void up_disableusartint(FAR struct up_dev_s *priv, FAR uint32_t *ie)
{
  irqstate_t flags;

  flags = spin_lock_irqsave(&priv->lock);

  if (ie != NULL)
    {
      uint32_t regval;

      regval  = up_serialin(priv, HT32_USART_CTRL1_OFFSET);
      *ie     = regval & HT32_USART_CTRL1_USED_INTS;
      regval  = up_serialin(priv, HT32_USART_CTRL3_OFFSET);
      *ie    |= regval & HT32_USART_CTRL3_USED_INTS;
    }

  up_setusartint_nolock(priv, 0);
  spin_unlock_irqrestore(&priv->lock, flags);
}

static int up_ioctl(FAR struct file *filep, int cmd, unsigned long arg)
{
  UNUSED(filep);
  UNUSED(cmd);
  UNUSED(arg);
  return -ENOTTY;
}

static int up_receive(FAR struct uart_dev_s *dev, FAR unsigned int *status)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->priv;
  uint32_t regval;

  regval = up_serialin(priv, HT32_USART_STS_OFFSET);
  if (status != NULL)
    {
      *status = regval;
    }

  regval = up_serialin(priv, HT32_USART_RDR_OFFSET);
  return (int)(regval & (HT32_USART_DT_MASK >> HT32_USART_DT_SHIFT));
}

static void up_rxint(FAR struct uart_dev_s *dev, bool enable)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->priv;
  irqstate_t flags;
  uint32_t ie;

  flags = spin_lock_irqsave(&priv->lock);
  ie    = priv->ie;

  if (enable)
    {
      ie |= HT32_USART_CTRL1_RDBFIEN | HT32_USART_CTRL3_ERRIEN;
    }
  else
    {
      ie &= ~(HT32_USART_CTRL1_RDBFIEN | HT32_USART_CTRL3_ERRIEN);
    }

  up_setusartint_nolock(priv, ie);
  spin_unlock_irqrestore(&priv->lock, flags);
}

static bool up_rxavailable(FAR struct uart_dev_s *dev)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->priv;

  return (up_serialin(priv, HT32_USART_STS_OFFSET) &
          HT32_USART_STS_RDBF) != 0;
}

static void up_txint(FAR struct uart_dev_s *dev, bool enable)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->priv;
  irqstate_t flags;
  uint32_t ie;

  flags = spin_lock_irqsave(&priv->lock);
  ie    = priv->ie;

  if (enable)
    {
      ie |= HT32_USART_CTRL1_TDBEIEN;
    }
  else
    {
      ie &= ~HT32_USART_CTRL1_TDBEIEN;
    }

  up_setusartint_nolock(priv, ie);
  spin_unlock_irqrestore(&priv->lock, flags);

  if (enable)
    {
      uart_xmitchars(dev);
    }
}

static bool up_txready(FAR struct uart_dev_s *dev)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->priv;

  return (up_serialin(priv, HT32_USART_STS_OFFSET) &
          HT32_USART_STS_TDBE) != 0;
}

void up_putc(int ch)
{
#ifdef HAVE_CONSOLE
#  if defined(USE_SERIALDRIVER) && defined(HAVE_UART) && CONSOLE_USART > 0
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)CONSOLE_DEVPTR->priv;
  uint32_t ie;

  up_disableusartint(priv, &ie);
  arm_lowputc(ch);
  up_restoreusartint(priv, ie);
#  else
  arm_lowputc(ch);
#  endif
#endif
}
